Changes in version 1.5.0-9003.1 ( Release date: )
==============

Changes:
* removed `transformation` as a required argument to `clusterExperiment`
* capitalized constructor functions `ClusterFunction()` and `ClusterExperiment()` to be consistent with other packages naming conventions.
* Changed argument `ndims` to `nDims` in `clusterSingle` to keep consistency.

Bugs:
* converted automatic assignment of colors based on `massivePalette` so won't run out on toy examples.

Changes in version 1.5.0-9002 ( Release date: )
==============
Changes:
* New function `plotClusterLegend` that will plot a legend for a clustering.
* `plotClusters` argument `existingColors` now allows for the option `firstOnly` 
* makeDendrogram now allows option 'coCluster' to the argument `dimReduce` indicating use of the coClustering matrix to build the dendrogram.
* makeDendrogram now has a method for building a dendrogram from an arbitrary distance function
* `showBigPalette` has been replaced with `showPalette` and now can show any palette of colors.
* Changed defaults in `plotDendrogram` so is colorblock of samples.
* The colors in `bigPalette` have been changed and shuffled to reduce similar colors and `massivePalette` has been created by adding the non-grey colors from `colors()` so that `plotClusters` will not run out of colors.
* `clusterMatrix` function now returns cluster matrix with rownames corresponding to sample names.
* `convertClusterLegend` now takes argument `whichClusters`

Bugs:
* Fixed so `diss` now passed to subsampling in calls to clusterSingle/clusterMany
* Fixed so `plotClusters` now will not give incomprehensible error if given duplicates of a color
* Fixed `plotDendrogram` so will not create blank plot.

Changes in version 1.3.8 ( Release date: 2017-10-24)
==============
Changes:
* Updates to documentation

Changes in version 1.3.7 ( Release date: 2017-10-24)
==============
Changes:
* Added function `tableClusters` for tabling clusters by name.