@@ -162,21 +162,24 @@ test_that("`clusterMany` works changing parameters", {
 })
 
 test_that("`getClusterManyParams` works", {
-	cc<-clusterMany(mat, ks=c(3,4),nFilter=c(10,15),nPCADim=c(3,4),dimReduce=c("none","PCA","var"),clusterFunction="pam",
-	                       subsample=FALSE, sequential=FALSE,run=TRUE,verbose=FALSE,
-	                       isCount=FALSE)
+	cc<-clusterMany(mat, ks=c(3,4),nFilter=c(10,15),nPCADim=c(3,4),
+		dimReduce=c("none","PCA","var"),clusterFunction="pam",
+	  	subsample=FALSE, sequential=FALSE,run=TRUE,verbose=FALSE,
+	    isCount=FALSE)
 	cc<-combineMany(cc,proportion=1,whichClusters = "clusterMany")
-	paramAll<-getClusterManyParams(cc)
-	expect_equal(colnames(paramAll),c("clusteringIndex", "dimReduce" ,"nDimReduce","k"))
+	expect_silent(paramAll<-getClusterManyParams(cc))
+	expect_equal(colnames(paramAll),c("clusteringIndex", "dimReduce", "nDimReduce", "nFilter", "k"))
 	expect_true(is.data.frame(paramAll))
-	expect_equal(paramAll[1:4,"dimReduce"],c("none","VAR","VAR","PCA"))
-	expect_equal(paramAll[1:4,"nDimReduce"],c(NA,10,15,3))
+	expect_equal(sort(as.character(unique(paramAll[,"dimReduce"]))),sort(c("none","var","PCA")))
+	
+	expect_equal(sort(unique(paramAll[,"nDimReduce"]),na.last=TRUE),sort(c(NA,3,4),na.last=TRUE))
+	expect_equal(sort(unique(paramAll[,"nFilter"]),na.last=TRUE),sort(c(NA,10,15),na.last=TRUE))
 	expect_true(is.numeric(paramAll[,"k"]))
 	
 	paramSub<-getClusterManyParams(cc,whichClusters=3:4)
-	expect_equal(colnames(paramSub),c("clusteringIndex", "nVARFeatures","k"))
+	expect_equal(colnames(paramSub),c("clusteringIndex", "dimReduce","nFilter"))
 	expect_true(is.data.frame(paramSub))
-	expect_equal(paramSub[,"nVARFeatures"],c(10,15))
+	expect_equal(sort(unique(paramAll[,"nFilter"]),na.last=TRUE),c(10,NA))
 	
 	expect_warning(getClusterManyParams(cc,whichClusters=1:5),"some clusters indicated in 'whichClusters' do not have type 'clusterMany'")
 	expect_warning(getClusterManyParams(cc,whichClusters=1),"did not return any clusters of type 'clusterMany'")
